tests/valid/mixed-statements.nyx
let x = 10
const PI = 3.14
fn calculate():
    pass
type MyInt = i32
