tests/invalid/function-five-space-base.nyx
fn base_four() -> ok:
      let x = 1
      let y = 2
     let z = 3
      pass
